# CVPO

./: .gitignore  CITATIONS.md  README.md  pyproject.toml  run_cvpo.py
docs/: release_checklist.md
docs/process/: 2026-03-05-day1-foundation.md  2026-03-06-day2-level0.md  2026-03-07-day3-level1.md  2026-03-08-09-level2-level3.md  2026-03-10-day10-release-hygiene.md  2026-03-10-day6-hardware-capability.md  2026-03-10-day7-frontends.md  2026-03-10-day8-education-system.md  2026-03-10-day9-benchmark-regression.md  2026-03-10-edge-case-findings.md  2026-03-10-guided-workflow.md  2026-03-10-hw-privacy-override-mascot.md  2026-03-10-level3-video-validation.md  2026-03-10-manual-workflow-readiness.md  2026-03-10-pipeline-value-prop-validation.md  DEVELOPMENT_TIMELINE.md  PRESENTATION_SUMMARY.md
docs/process/reports/: bench_level0.json  (+3 more)
libs/: CV_Midterm_OneStop_StudyGuide.md  cnn_lab_wireframe.md  results_summary.csv  results_timeseries.csv
notebooks/: level_0_classification.ipynb  level_2_detect_segment_classify.ipynb
src/cvpo/: __init__.py  __main__.py
tests/: test_benchmark_runner.py  test_cli.py  test_decision_tree.py  test_detection_to_segmentation_connector.py  test_edge_cases.py  test_education_components.py  test_explainability.py  test_hardware_enhanced.py  test_hygiene_check.py  test_level0_classification.py  test_level1_pipeline.py  test_level2_pipeline.py  test_level3_real_video.py  test_notebook_helpers.py  test_pipeline_core.py  test_real_models.py  test_segmentation_to_classification_connector.py  test_tracking_stage.py
tools/: hygiene_check.py
(+32 files in other folders)
